--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
             font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
             margin: 0;
             padding: 0;
+            margin-bottom:0px;
             
         }
         /*body{ background: linear-gradient(45deg,rgb(0, 251, 255), #00fbff, #ff00bb, coral,rgb(0, 255, 8),rgb(0, 255, 0),rgb(0, 157, 255));
