--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
             margin: 0;
             padding: 0;
             margin-bottom:0px;
-            
+            overflow:hidden;
         }
         /*body{ background: linear-gradient(45deg,rgb(0, 251, 255), #00fbff, #ff00bb, coral,rgb(0, 255, 8),rgb(0, 255, 0),rgb(0, 157, 255));
             background-size: 400% 400%;
