--- a/index.html
+++ b/index.html
@@ -10,8 +10,7 @@
             font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
             margin: 0;
             padding: 0;
-            margin-bottom:0px;
-            overflow:hidden;
+            background-color: #2C3E50;
         }
         /*body{ background: linear-gradient(45deg,rgb(0, 251, 255), #00fbff, #ff00bb, coral,rgb(0, 255, 8),rgb(0, 255, 0),rgb(0, 157, 255));
             background-size: 400% 400%;
@@ -117,10 +116,10 @@ h2{
             background-color: #2C3E50;
             color: #fff;
             text-align: center;
-            padding: 20px 0;
+            padding: 30px;
             vertical-align: baseline;
-            border: 10px 10px 10px 10px gold;
-            margin-bottom: 0%;
+            border-top: 3px solid gold;
+            margin-bottom: -1%;
             user-select: none;
         }
 
@@ -375,6 +374,25 @@ img{
 }
 .ino img{
     height: 80%;
+}
+/* width */
+::-webkit-scrollbar {
+  width: 10px;
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+  background: #f1f1f1; 
+}
+ 
+/* Handle */
+::-webkit-scrollbar-thumb {
+  background: #888; 
+}
+
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+  background: #555; 
 }
 #gmail-logo {
   position: relative;
