--- a/index.html
+++ b/index.html
@@ -5,12 +5,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <title>Shourya's Personal Webpage</title>
+    <link rel="icon" href="https://t4.ftcdn.net/jpg/06/65/42/77/240_F_665427732_jtz1eXcBdC7yBG447HQi08xbGc8GFZKm.jpg" style="border-radius: 100%;" type="#image" alt="I-Logo">
     <style>
         body {
             font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
             margin: 0;
             padding: 0;
             background-color: #2C3E50;
+            scroll-behavior: smooth;
         }
         /*body{ background: linear-gradient(45deg,rgb(0, 251, 255), #00fbff, #ff00bb, coral,rgb(0, 255, 8),rgb(0, 255, 0),rgb(0, 157, 255));
             background-size: 400% 400%;
@@ -23,7 +25,7 @@ h2{
         @keyframes gradient {
             0% { background-position: 0% 50%; }
             50% { background-position: 100% 50%; }
-            100% { background-position: 0% 50%; }
+            100% { background-position: 0% 50%; };
         }
 
         header {
@@ -47,7 +49,7 @@ h2{
         @keyframes fadeIn {
             from {
                 opacity: 0;
-                transform: translateY(-20px);
+                transform: translateY(-10px);
             }
             to {
                 opacity: 1;
@@ -68,7 +70,7 @@ h2{
             font-size: 20px;
             transition: color 0.3s ease;
             z-index: 30;
-        }
+        }     
 
         nav a:hover {
             color: #FF9F43;
@@ -309,7 +311,7 @@ main{
   user-select: none;
 }
 
-main:hover{
+main:hover{         
   font-variation-settings: "wght" 100, "ital" 0;
   text-shadow: none;
 }
@@ -377,7 +379,7 @@ img{
 }
 /* width */
 ::-webkit-scrollbar {
-  width: 10px;
+  width: 5px;
 }
 
 /* Track */
@@ -431,12 +433,114 @@ img{
 a:hover{
     text-decoration: line-through;
 }
+@media screen and (max-width: 768px) {
+  .profile-img {
+    height: 110px;
+    width: 110px;
+    animation: none;
+    transform: translate(0%, -45%);
+  }
+  .cont {
+  position: relative;
+  width: 25%;
+  height: 5%;
+}
+.cont h2 {
+  color: #fff;
+  font-size: 4em;
+  position: absolute;
+  transform: translate(33%, -110%);
+  user-select: none;
+}
+nav a {
+            color: #fff;
+            text-decoration: none;
+            margin: 0 20px;
+            font-size: 18px;
+            transition: color 0.3s ease;
+            z-index: 30;
+        }     
+ @keyframes fadeInUp {
+     from {
+        opacity: 0;
+        transform: translateY(2px);
+       }
+     to {
+        opacity: 1;
+        transform: translateY(0);
+      }
+ }
+ nav {
+     text-align: center;
+     margin-top: 2px;
+     transform: translate(0%, -390%);  
+   }
+header {
+            background-color: #2C3E50;
+            color: #fff;
+            padding: 5px;
+            height: 200px;
+            text-align: center;
+            border-top-left-radius: 500%;
+            border-bottom-right-radius: 90%;
+            border-bottom-left-radius: 2%;
+        }
+ main{
+  transition: all 0.5s;
+  -webkit-text-stroke: 2px #d6f4f4;
+  font-variation-settings: "wght" 600, "ital" 1;
+  font-size: 4rem;
+  text-align: center;
+  color: transparent;
+  font-family: "Meta", sans-serif;
+  text-shadow: 10px 10px 0px #07bccc,
+    15px 15px 0px #e601c0,
+    20px 20px 0px #e9019a,
+    25px 25px 0px #f40468,
+    45px 45px 10px #482896;
+  cursor: pointer;
+  width: fit-content;
+  padding: 10px;
+  padding-top: 2px;
+  margin-left: 19%;
+  user-select: none;
+}
+main:hover{         
+  font-variation-settings: "wght" 100, "ital" 0;
+  text-shadow: none;
+  margin-left: 25%;
+}
+:root {
+  --stroke-width: calc(1em / 12);
+  --font-size: 10vh;
+  --font-weight: 500;
+  --letter-spacing: calc(1em / 16);
+}
+.h5 {
+  background-clip: text;
+  background-image: linear-gradient(to right, #09f1b8, #00a2ff, #ff00d2, #fed90f);
+  color: rgb(0, 0, 0);
+  font-size: var(--font-size);
+  font-weight: var(--font-weight);
+  letter-spacing: var(--letter-spacing);
+  padding: calc(--stroke-width / 2);
+  -webkit-text-stroke-color: transparent;
+  -webkit-text-stroke-width: var(--stroke-width);
+  user-select: none;
+}
+#telpgsh{
+  height: 275px;
+}
+}
+br{
+  user-select: none;
+}
     </style>
 </head>
 <body oncontextmenu="return false">
     <center>
-    <section style="background:linear-gradient(to bottom,blue,cyan,rgb(100, 142, 220));padding-left: 10px; margin-bottom: 5px;">
-    <header style="margin-bottom: 4px;border-bottom: 4px solid black;">
+    <section id="telpgsh" style="background:linear-gradient(to bottom,blue,cyan,rgb(100, 142, 220));padding-left: 10px; margin-bottom: 5px;">
+    <header style="margin-bottom: 4px;border-bottom: 2px solid black;">
 
         <img src="https://i.pinimg.com/564x/1b/50/72/1b50725805e2f68d90bd9fb558feb249.jpg" alt="Shourya's Photo" class="profile-img">
         
@@ -495,10 +599,11 @@ a:hover{
         </div>
         <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d20268.61845675258!2d87.93672478389426!3d26.09828575025775!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x39e516befd097303%3A0xb171e5facfa2a2d8!2sKishanganj%2C%20Bihar!5e0!3m2!1sen!2sin!4v1626091351764!5m2!1sen!2sin" width="600" height="450" style="border:0;" allowfullscreen="" loading="fast"></iframe>
         <div class="contact-info">
+          <h5>TEMPORARY Gmail & Ph.No.</h5>
             <p><svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor" class="bi bi-envelope" viewBox="0 0 20 20">
                 <path d="M0 4a2 2 0 0 1 2-2h12a2 2 0 0 1 2 2v8a2 2 0 0 1-2 2H2a2 2 0 0 1-2-2zm2-1a1 1 0 0 0-1 1v.217l7 4.2 7-4.2V4a1 1 0 0 0-1-1zm13 2.383-4.708 2.825L15 11.105zm-.034 6.876-5.64-3.471L8 9.583l-1.326-.795-5.64 3.47A1 1 0 0 0 2 13h12a1 1 0 0 0 .966-.741M1 11.105l4.708-2.897L1 5.383z"/>
               </svg>
-               Email: <a href="mailto: gutkagamer77231@gmail.com?Subject=Hello" style="text-decoration: none;color: #ff0000;">gutkagamer77231@gmail.com</a></p>
+               Gmail: <a href="mailto: gutkagamer77231@gmail.com?Subject=Hello" style="text-decoration: none;color: #ff0000;">gutkagamer77231@gmail.com</a></p>
             <p><svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor" class="bi bi-telephone" viewBox="0 0 20 20">
                 <path d="M3.654 1.328a.678.678 0 0 0-1.015-.063L1.605 2.3c-.483.484-.661 1.169-.45 1.77a17.6 17.6 0 0 0 4.168 6.608 17.6 17.6 0 0 0 6.608 4.168c.601.211 1.286.033 1.77-.45l1.034-1.034a.678.678 0 0 0-.063-1.015l-2.307-1.794a.68.68 0 0 0-.58-.122l-2.19.547a1.75 1.75 0 0 1-1.657-.459L5.482 8.062a1.75 1.75 0 0 1-.46-1.657l.548-2.19a.68.68 0 0 0-.122-.58zM1.884.511a1.745 1.745 0 0 1 2.612.163L6.29 2.98c.329.423.445.974.315 1.494l-.547 2.19a.68.68 0 0 0 .178.643l2.457 2.457a.68.68 0 0 0 .644.178l2.189-.547a1.75 1.75 0 0 1 1.494.315l2.306 1.794c.829.645.905 1.87.163 2.611l-1.034 1.034c-.74.74-1.846 1.065-2.877.702a18.6 18.6 0 0 1-7.01-4.42 18.6 18.6 0 0 1-4.42-7.009c-.362-1.03-.037-2.137.703-2.877z"/>
               </svg>Phone: +91 9470616751</p>
